--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,6 @@
               "src/assets"
             ],
             "styles": [
-/*              "node_modules/bootstrap/dist/css/bootstrap.css",*/
               "src/styles.css"
             ],
             "scripts": [
@@ -55,7 +54,13 @@
               "vendorChunk": true,
               "extractLicenses": false,
               "sourceMap": true,
-              "namedChunks": true
+              "namedChunks": true,
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.development.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
